--- a/Portfolio Website Project.html
+++ b/Portfolio Website Project.html
@@ -8,13 +8,13 @@
         <h1>Helga's Portfolio</h1>
         <h2>I'm a Web Developer</h2>
         <hr/>
-        <h3><a href="./Favourite Movie Project.html"> Movie Ranking Project</a></h3>
+        <h3><a href="./Public/Favourite Movie Project.html"> Movie Ranking Project</a></h3>
         <img src="./Assets/movies.png" height="200"/>
-        <h3><a href="./Birthday Invite Project.html"> Birthday Invite Project</a></h3>
+        <h3><a href="./Public/Birthday Invite Project.html"> Birthday Invite Project</a></h3>
         <img src="./Assets/birthday.png" height="200"/>
         <hr/>
-        <a href="./About Me.html">About Me</a>
-        <a href="./Contact Me.html">Contact Me</a>
+        <a href="./Public/About Me.html">About Me</a>
+        <a href="./Public/Contact Me.html">Contact Me</a>
 
     </body>
 </html>
